<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterNote"
            android:layout_centerHorizontal="true"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            />

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titleEditText"
            android:layout_below="@id/title"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:maxLines="2"
            />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleEditText"
            android:hint="@string/descriptionEditText"
            android:inputType="textMultiLine"
            android:layout_marginTop="10dp"
            android:maxLines="10"
            />

        <Button
            android:id="@+id/saveButton"
            android:text="@string/saveButton"
            android:layout_below="@id/descriptionEditText"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:background="@color/colorAccent"
            />

    </RelativeLayout>

</LinearLayout>