<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/confTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/confirmationTextView"
                android:textSize="24sp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                />

            <Button
                android:id="@+id/noButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_button"
                android:layout_below="@id/confTextView"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:background="@color/colorAccent"
                />

            <Button
                android:id="@+id/yesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes_button"
                android:layout_below="@id/confTextView"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="25dp"
                android:background="@color/colorAccent"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>